--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,12 @@
       android:versionName="1.0">
       <uses-permission android:name="android.permission.INTERNET" />
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <application android:label="@string/app_name" android:icon="@drawable/icon">
+      <application
+        android:label="@string/app_name"
+        android:icon="@drawable/icon"
+		android:logo="@drawable/radio"
+        android:theme="@style/AppTheme"
+        >
         <activity android:name=".RadioActivity"
                   android:label="@string/app_name">
             <intent-filter>
