--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,8 @@
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
       <application
         android:label="@string/app_name"
-        android:icon="@drawable/icon"
-		android:logo="@drawable/radio"
+        android:icon="@drawable/radio"
+		android:logo="@drawable/icon"
         android:theme="@style/AppTheme"
         >
         <activity android:name=".RadioActivity"
