--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,3 +15,8 @@ android {
         }
     }
 }
+
+dependencies {
+  compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+  compile 'com.android.support:support-v4:18.0.+'
+}
